--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -29,17 +29,17 @@
     }
   },
   "seo": {
-    "title": "Neuigkeiten und Updates zur KI-Technologie",
-    "description": "Aktuelle Nachrichten und Erkenntnisse zu künstlicher Intelligenz, Technologie und digitaler Innovation",
-    "siteUrl": "https://www.ainews.com/",
-    "keywords": "KI-Neuigkeiten, Technologie-Neuigkeiten, künstliche Intelligenz, digitale Innovation, Tech-Updates"
+    "title": "Neueste Nachrichten und Updates - TrendNews",
+    "description": "Bleiben Sie auf dem Laufenden mit den neuesten Nachrichten, Sport-Updates und Trendgeschichten aus der ganzen Welt",
+    "siteUrl": "https://www.trendnews.com/",
+    "keywords": "Trendnachrichten, Sportnachrichten, neueste Updates, aktuelle Ereignisse"
   },
   "categories": {
-    "ai": "Künstliche Intelligenz",
+    "sports": "Sport",
+    "politics": "Politik",
     "technology": "Technologie",
-    "innovation": "Innovation",
-    "research": "Forschung",
-    "development": "Entwicklung",
+    "entertainment": "Unterhaltung",
+    "business": "Geschäft",
     "featured": "Empfohlen",
     "trending": "Beliebt",
     "latest": "Letzte"
@@ -49,36 +49,140 @@
     "contact": "Kontakt",
     "privacy": "Datenschutzrichtlinie",
     "terms": "Nutzungsbedingungen",
-    "copyright": "© 2024 AI News. Alle Rechte vorbehalten."
+    "copyright": "© 2024 TrendNews. Alle Rechte vorbehalten."
   },
   "news": {
-    "ai-breakthrough-2024": {
-      "title": "Großer Durchbruch in der KI: Neues Modell zeigt Verständnis auf menschlichem Niveau",
-      "description": "Ein bahnbrechendes neues KI-Modell zeigt beispiellose Fähigkeiten im Verständnis natürlicher Sprache und bei der Problemlösung.",
-      "content": "Detaillierter Artikelinhalt hier...",
-      "category": "KI",
+    "texas-longhorns-vs-am-2024": {
+      "title": "Texas Longhorns gegen Texas A&M: Historische Rivalität erneuert",
+      "description": "Justin Tuckers Vermächtnis wird in Erinnerung gerufen, als Texas Longhorns und Texas A&M in ihrem ersten SEC-Duell gegeneinander antreten",
+      "content": "<p>In einem mit Spannung erwarteten Duell, das College-Football-Fans im ganzen Land in seinen Bann gezogen hat, erneuerten die Texas Longhorns und die Texas A&M Aggies ihre historische Rivalität. Das Spiel weckte Erinnerungen an legendäre Longhorns-Spieler, darunter Justin Tucker, dessen entscheidende Leistungen die Geschichte des Programms prägen.</p><p>Quinn Ewers führte die Offensive der Longhorns an, während der hochgelobte Neuling Arch Manning, Neffe der NFL-Legenden Peyton und Eli Manning, an der Seitenlinie bereitstand. Das Spiel markierte ein weiteres Kapitel im geschichtsträchtigen texanischen Football-Programm, das NFL-Stars wie Justin Tucker hervorgebracht hat, der derzeit einer der treffsichersten Kicker der NFL ist.</p><p>Bemerkenswerte Statistiken des Spiels waren:</p><ul><li>Über 100.000 Besucher im Stadion</li><li>Erstes Aufeinandertreffen der Teams seit dem Beitritt zur SEC</li><li>Quinn Ewers vervollständigt wichtige Pässe</li></ul>",
+      "category": "Sport",
       "tags": [
-        "KI",
-        "Maschinelles Lernen",
-        "Technologie"
+        "College-Fußball",
+        "Texas",
+        "SEC"
       ],
-      "author": "KI-Nachrichtenteam",
-      "readingTime": "5 Minuten",
-      "publishDate": "2024-03-30T10:00:00Z"
+      "author": "Sportteam",
+      "readingTime": "4",
+      "publishDate": "2024-12-01T16:50:00Z"
     },
-    "tech-innovation-2024": {
-      "title": "Revolutionäre Fortschritte im Quantencomputing",
-      "description": "Wissenschaftler erreichen wichtigen Meilenstein in der Stabilität von Quantencomputern.",
-      "content": "Detaillierter Artikelinhalt hier...",
-      "category": "Technologie",
+    "kash-patel-fbi-2024": {
+      "title": "Kash Patel: Ehemaliger Trump-Beamter für FBI-Rolle im Gespräch",
+      "description": "Der frühere Beamte der Trump-Regierung, Kash Patel, ist ein potenzieller Kandidat für den Posten des FBI-Direktors",
+      "content": "<p>In einer bedeutsamen Entwicklung in Washington ist Kash Patel, ein ehemaliger Beamter der Trump-Regierung, als potenzieller Kandidat für den Posten des FBI-Direktors aufgetaucht. Diese Nachricht hat in allen politischen Kreisen erhebliches Interesse und Diskussionen hervorgerufen.</p><p>Patel, bekannt für seine früheren Rollen in der nationalen Sicherheit und im Geheimdienst, ist in den Mittelpunkt der Aufmerksamkeit gerückt, während die Diskussionen über die zukünftige Führung des FBI weitergehen.</p><p>Wichtige Punkte zu Kash Patel:</p><ul><li>Ehemaliger Stabschef des amtierenden Verteidigungsministers</li><li>Frühere Erfahrung in Rollen der nationalen Sicherheit</li><li>Hintergrund in Geheimdienstoperationen</li></ul>",
+      "category": "Politik",
       "tags": [
-        "Quantencomputing",
-        "Innovation",
-        "Forschung"
+        "FBI",
+        "Politik",
+        "Washington"
       ],
-      "author": "Tech News Team",
-      "readingTime": "4 Minuten",
-      "publishDate": "29.03.2024, 15:30 Uhr (MESZ)"
+      "author": "Politisches Team",
+      "readingTime": "3",
+      "publishDate": "2024-11-30T18:50:00Z"
+    },
+    "trevor-lawrence-injury-2024": {
+      "title": "Trevor Lawrence im Spiel Texans gegen Jaguars verletzt",
+      "description": "Jaguars-QB Trevor Lawrence nach schwerem Schlag gegen Texans vom Platz getragen",
+      "content": "<p>Der Quarterback der Jacksonville Jaguars, Trevor Lawrence, wurde während des heutigen Spiels gegen die Houston Texans nach einem heftigen Schlag vom Feld getragen. Der Vorfall ereignete sich im dritten Viertel eines entscheidenden Divisionsspiels.</p><p>Erste Berichte deuten darauf hin, dass Lawrence nach dem Schlag von Azeez Al-Shaair, dem Linebacker der Texans, auf eine Gehirnerschütterung untersucht wurde. Die Verletzung hat Zweifel an den Playoff-Hoffnungen der Jaguars geweckt, die sich nun in der Schlussphase der Saison befinden.</p><p>Wichtige Entwicklungen:</p><ul><li>Lawrence wurde im dritten Viertel vom Feld getragen</li><li>Wird auf eine mögliche Gehirnerschütterung untersucht</li><li>Ersatz-Quarterback hat Spielaufgaben übernommen</li></ul>",
+      "category": "Sport",
+      "tags": [
+        "NFL",
+        "Jaguare",
+        "Verletzungsnachrichten"
+      ],
+      "author": "Sportteam",
+      "readingTime": "4",
+      "publishDate": "2024-12-01T09:30:00Z"
+    },
+    "eagles-ravens-matchup-2024": {
+      "title": "Eagles treffen auf Ravens im Duell der Super-Bowl-Anwärter",
+      "description": "Lamar Jackson und die Verteidigung der Eagles sind die Schlagzeilen im wichtigsten Inter-Conference-Duell",
+      "content": "<p>Die Philadelphia Eagles und Baltimore Ravens standen sich in einem mit Spannung erwarteten Duell zweier Super Bowl-Anwärter gegenüber. Ravens Quarterback Lamar Jackson zeigte seine dynamischen Spielmacherfähigkeiten gegen die beeindruckende Verteidigung der Eagles.</p><p>Das Spiel beinhaltete mehrere Schlüsselduelle, darunter den Laufangriff der Ravens unter der Führung von Derrick Henry gegen die ersten sieben der Eagles. Zay Flowers setzte seine beeindruckende Rookie-Saison für die Ravens fort.</p><p>Spielhighlights:</p><ul><li>Lamar Jacksons Dual-Threat-Leistung</li><li>Defensive Anpassungen der Eagles</li><li>Schlüsselleistungen der Offensive Lines beider Teams</li></ul>",
+      "category": "Sport",
+      "tags": [
+        "NFL",
+        "Adler",
+        "Raben",
+        "Lamar Jackson"
+      ],
+      "author": "Sportteam",
+      "readingTime": "3",
+      "publishDate": "2024-12-01T00:30:00Z"
+    },
+    "seahawks-jets-nfl-2024": {
+      "title": "Seahawks empfangen Jets in Woche 13 der NFL",
+      "description": "Geno Smith führt die Seahawks in entscheidendem Duell gegen schwächelnde Jets an",
+      "content": "<p>Die Seattle Seahawks, angeführt von Quarterback Geno Smith, empfingen die New York Jets in einem Spiel der Woche 13 mit Auswirkungen auf die Playoffs. Smith, der gegen sein ehemaliges Team antrat, wollte Seattles Playoff-Hoffnungen in der wettbewerbsintensiven NFC West am Leben erhalten.</p><p>Rookie-Runningback Zach Charbonnet hat sich als Schlüsselspieler für die Offensive der Seahawks herauskristallisiert, während die Jets weiterhin nach Konstanz in der Offensive suchen.</p><p>Wichtige Handlungsstränge:</p><ul><li>Geno Smiths Leistung gegen sein ehemaliges Team</li><li>Playoff-Positionierung der Seahawks</li><li>Offensive Probleme der Jets</li><li>Auswirkungen des Rookies Zach Charbonnet</li></ul>",
+      "category": "Sport",
+      "tags": [
+        "NFL",
+        "Die Seahawks",
+        "Düsen",
+        "Woche 13"
+      ],
+      "author": "Sportteam",
+      "readingTime": "3",
+      "publishDate": "2024-12-01T10:00:00Z"
+    },
+    "cardinals-vikings-nfl-2024": {
+      "title": "Cardinals vs. Vikings: Auswirkungen auf die NFC-Playoffs",
+      "description": "Sam Darnold und die Cardinals treffen in einem wichtigen NFC-Duell auf die Vikings",
+      "content": "<p>Die Arizona Cardinals mit Quarterback Sam Darnold an der Spitze traten in einem Spiel mit erheblichen Auswirkungen auf die NFC-Playoffs gegen die Minnesota Vikings an. Die Verteidigung der Vikings, angeführt von erfahrenen Spielern, versuchte, die Angriffsdrohungen der Cardinals einzudämmen.</p><p>Kyler Murrays Abwesenheit wirkte sich weiterhin auf die Angriffsstrategie der Cardinals aus, während die Vikings versuchten, ihre Position im Rennen um die NFC North zu behaupten.</p><p>Schwerpunkte des Spiels:</p><ul><li>Sam Darnolds Leistung als Starter</li><li>Verteidigungsstrategie der Vikings</li><li>Auswirkungen auf die NFC-Playoffs</li><li>Wichtige Verletzungen betreffen beide Teams</li></ul>",
+      "category": "Sport",
+      "tags": [
+        "NFL",
+        "Kardinäle",
+        "Wikinger",
+        "NFC"
+      ],
+      "author": "Sportteam",
+      "readingTime": "3",
+      "publishDate": "2024-12-01T10:00:00Z"
+    },
+    "liverpool-man-city-epl-2024": {
+      "title": "Liverpool gegen Manchester City: Titelrennen in der Premier League",
+      "description": "Pep Guardiolas City trifft im entscheidenden Premier-League-Duell auf Liverpool",
+      "content": "<p>Liverpool und Manchester City, zwei Premier-League-Giganten, trafen in einem Spiel aufeinander, das den Titelkampf erheblich beeinflussen könnte. Pep Guardiolas taktischer Ansatz stand Liverpools hochintensivem Spielstil in Anfield gegenüber.</p><p>Erling Haaland führte Citys Angriff an, während Liverpools Cody Gakpo in diesem entscheidenden Spiel Eindruck machen wollte. Das Spiel verdeutlichte die anhaltende Rivalität zwischen zwei der besten englischen Teams.</p><p>Spielhighlights:</p><ul><li>Taktischer Kampf zwischen Top-Managern</li><li>Haalands Torjägerform</li><li>Liverpools Heimvorteil in Anfield</li><li>Auswirkungen auf die Premier-League-Tabelle</li></ul>",
+      "category": "Sport",
+      "tags": [
+        "Premier League",
+        "Liverpool",
+        "Manchester City",
+        "Fußball"
+      ],
+      "author": "Sportteam",
+      "readingTime": "4",
+      "publishDate": "2024-12-01T10:00:00Z"
+    },
+    "byu-houston-football-2024": {
+      "title": "BYU trifft im Konferenzspiel auf Houston",
+      "description": "BYU Cougars treffen in entscheidendem Konferenzspiel auf Houston",
+      "content": "<p>Die BYU Cougars traten in einem entscheidenden Conference-Duell gegen die Houston Cougars an, das erhebliche Auswirkungen auf die Saison beider Teams hatte. BYUs Offensive, angeführt von wichtigen Spielmachern, versuchte schon früh im Spiel die Oberhand zu gewinnen.</p><p>Houstons Quarterback Zeon Chriss wollte seine starke Form gegen BYUs Defense fortsetzen. Das Spiel markierte einen wichtigen Meilenstein in der Conference-Platzierung beider Teams.</p><p>Wichtige Elemente:</p><ul><li>Auswirkungen auf die Conference-Platzierung</li><li>BYUs Offensivstrategie</li><li>Houstons Defensivanpassungen</li><li>Einflussreiche Spieler auf beiden Seiten</li></ul>",
+      "category": "Sport",
+      "tags": [
+        "College-Fußball",
+        "BYU",
+        "Houston",
+        "NCAA"
+      ],
+      "author": "Sportteam",
+      "readingTime": "3",
+      "publishDate": "2024-11-30T23:20:00Z"
+    },
+    "miami-hurricanes-acc-2024": {
+      "title": "Miami Hurricanes Football: Vorschau auf das ACC-Titelspiel",
+      "description": "Miami trifft auf Syracuse mit Auswirkungen auf die ACC-Meisterschaft",
+      "content": "<p>Das Football-Programm der Miami Hurricanes bereitete sich auf ein entscheidendes ACC-Duell gegen Syracuse vor, bei dem es um bedeutende Auswirkungen auf den Conference-Titel ging. Unter Cheftrainer Mario Cristobal versuchte Miami, seine Position in der ACC-Tabelle zu stärken.</p><p>Das Spiel war auch ein bedeutender Moment für Syracuse, da sie sich an die jüngsten Trainerwechsel unter der Leitung von Fran Brown anpassten.</p><p>Punkte der Spielvorschau:</p><ul><li>Auswirkungen auf die ACC-Meisterschaft</li><li>Miamis Offensivstrategie</li><li>Syracuses Trainerwechsel</li><li>Wichtige Spielerduelle</li><li>Auswirkungen auf Bowl-Spielszenarien</li></ul>",
+      "category": "Sport",
+      "tags": [
+        "College-Fußball",
+        "Miami Hurricanes",
+        "ACC",
+        "Syrakus"
+      ],
+      "author": "Sportteam",
+      "readingTime": "3",
+      "publishDate": "2024-11-30T18:30:00Z"
     }
   }
 }
