--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -29,17 +29,17 @@
     }
   },
   "seo": {
-    "title": "Notizie e aggiornamenti sulla tecnologia AI",
-    "description": "Ultime notizie e approfondimenti su intelligenza artificiale, tecnologia e innovazione digitale",
-    "siteUrl": "https://www.ainews.com/",
-    "keywords": "Notizie AI, notizie tecnologiche, intelligenza artificiale, innovazione digitale, aggiornamenti tecnologici"
+    "title": "Ultime notizie e aggiornamenti - TrendNews",
+    "description": "Rimani aggiornato con le ultime notizie, gli aggiornamenti sportivi e le storie di tendenza da tutto il mondo",
+    "siteUrl": "https://www.trendnews.com/",
+    "keywords": "notizie di tendenza, notizie sportive, ultimi aggiornamenti, eventi attuali"
   },
   "categories": {
-    "ai": "Intelligenza artificiale",
+    "sports": "Sportivi",
+    "politics": "Politica",
     "technology": "Tecnologia",
-    "innovation": "Innovazione",
-    "research": "Ricerca",
-    "development": "Sviluppo",
+    "entertainment": "Divertimento",
+    "business": "Attività commerciale",
     "featured": "In primo piano",
     "trending": "Di tendenza",
     "latest": "Ultimo"
@@ -49,36 +49,140 @@
     "contact": "Contatti",
     "privacy": "politica sulla riservatezza",
     "terms": "Termini di utilizzo",
-    "copyright": "© 2024 AI News. Tutti i diritti riservati."
+    "copyright": "© 2024 TrendNews. Tutti i diritti riservati."
   },
   "news": {
-    "ai-breakthrough-2024": {
-      "title": "Importante svolta nell'intelligenza artificiale: un nuovo modello mostra una comprensione a livello umano",
-      "description": "Un nuovo modello di intelligenza artificiale rivoluzionario dimostra capacità senza precedenti nella comprensione del linguaggio naturale e nella risoluzione dei problemi.",
-      "content": "Per il contenuto dettagliato dell'articolo clicca qui...",
-      "category": "Intelligenza artificiale",
+    "texas-longhorns-vs-am-2024": {
+      "title": "Texas Longhorns contro Texas A&M: la rivalità storica si rinnova",
+      "description": "L'eredità di Justin Tucker ricordata mentre i Texas Longhorns e i Texas A&M si affrontano nel loro primo incontro SEC",
+      "content": "<p>In un incontro molto atteso che ha affascinato i fan del football universitario in tutta la nazione, i Texas Longhorns e i Texas A&M Aggies hanno rinnovato la loro storica rivalità. La partita ha riportato alla mente i leggendari giocatori dei Longhorns, tra cui Justin Tucker, le cui prestazioni decisive rimangono impresse nella storia del programma.</p><p>Quinn Ewers ha guidato l'attacco dei Longhorns, mentre la matricola molto quotata Arch Manning, nipote delle leggende della NFL Peyton ed Eli Manning, era pronta a bordo campo. La partita ha segnato un altro capitolo nel leggendario programma di football del Texas, che ha prodotto stelle della NFL come Justin Tucker, attualmente uno dei kicker più precisi della NFL.</p><p>Le statistiche degne di nota della partita includevano:</p><ul><li>Oltre 100.000 spettatori allo stadio</li><li>Primo incontro tra le squadre da quando sono entrate nella SEC</li><li>Quinn Ewers completa passaggi chiave</li></ul>",
+      "category": "Sportivi",
       "tags": [
-        "Intelligenza artificiale",
-        "Apprendimento automatico",
-        "Tecnologia"
+        "Calcio universitario",
+        "Texas",
+        "SEC"
       ],
-      "author": "Squadra di notizie AI",
-      "readingTime": "5 minuti",
-      "publishDate": "2024-03-30T10:00:00Z"
+      "author": "Squadra sportiva",
+      "readingTime": "4",
+      "publishDate": "2024-12-01T16:50:00Z"
     },
-    "tech-innovation-2024": {
-      "title": "Avanzamento rivoluzionario del calcolo quantistico",
-      "description": "Gli scienziati raggiungono un traguardo importante nella stabilità del calcolo quantistico.",
-      "content": "Per il contenuto dettagliato dell'articolo clicca qui...",
-      "category": "Tecnologia",
+    "kash-patel-fbi-2024": {
+      "title": "Kash Patel: ex funzionario di Trump preso in considerazione per il ruolo nell'FBI",
+      "description": "L'ex funzionario dell'amministrazione Trump Kash Patel emerge come potenziale candidato a direttore dell'FBI",
+      "content": "<p>In uno sviluppo significativo a Washington, Kash Patel, un ex funzionario dell'amministrazione Trump, è emerso come potenziale candidato per la posizione di direttore dell'FBI. Questa notizia ha generato notevole interesse e discussione nei circoli politici.</p><p>Patel, noto per i suoi precedenti ruoli in posizioni di sicurezza nazionale e intelligence, è diventato un punto focale di attenzione mentre continuano le discussioni sulla futura leadership dell'FBI.</p><p>Punti chiave su Kash Patel:</p><ul><li>Ex capo dello staff del Segretario della Difesa ad interim</li><li>Precedente esperienza in ruoli di sicurezza nazionale</li><li>Esperienza in operazioni di intelligence</li></ul>",
+      "category": "Politica",
       "tags": [
-        "Calcolo quantistico",
-        "Innovazione",
-        "Ricerca"
+        "FBI",
+        "Politica",
+        "Washington"
       ],
-      "author": "Squadra di notizie tecnologiche",
-      "readingTime": "4 minuti",
-      "publishDate": "2024-03-29T15:30:00Z"
+      "author": "Squadra politica",
+      "readingTime": "3",
+      "publishDate": "2024-11-30T18:50:00Z"
+    },
+    "trevor-lawrence-injury-2024": {
+      "title": "Trevor Lawrence si è infortunato nella partita Texans vs Jaguars",
+      "description": "Il QB dei Jaguars Trevor Lawrence portato via dopo un duro colpo contro i Texans",
+      "content": "<p>Il quarterback dei Jacksonville Jaguars Trevor Lawrence è stato portato via dal campo in barella durante la partita di oggi contro gli Houston Texans in seguito a un colpo significativo. L'incidente è avvenuto nel terzo quarto di quello che è stato un cruciale scontro di divisione.</p><p>I primi resoconti suggeriscono che Lawrence è stato valutato per una commozione cerebrale dopo il colpo del linebacker dei Texans Azeez Al-Shaair. L'infortunio ha sollevato preoccupazioni sulle speranze di playoff dei Jaguars mentre affrontano il tratto finale della stagione.</p><p>Sviluppi chiave:</p><ul><li>Lawrence è stato portato via in barella nel terzo quarto</li><li>In fase di valutazione per una possibile commozione cerebrale</li><li>Il quarterback di riserva ha assunto i compiti di gioco</li></ul>",
+      "category": "Sportivi",
+      "tags": [
+        "La NFL",
+        "Giaguari",
+        "Notizie sugli infortuni"
+      ],
+      "author": "Squadra sportiva",
+      "readingTime": "4",
+      "publishDate": "2024-12-01T09:30:00Z"
+    },
+    "eagles-ravens-matchup-2024": {
+      "title": "Gli Eagles affrontano i Ravens nello scontro per il Super Bowl",
+      "description": "Lamar Jackson e la difesa degli Eagles sono i protagonisti del match chiave tra le conferenze",
+      "content": "<p>I Philadelphia Eagles e i Baltimore Ravens si sono affrontati in un attesissimo incontro tra due contendenti al Super Bowl. Il quarterback dei Ravens Lamar Jackson ha mostrato le sue abilità dinamiche di playmaking contro la formidabile difesa degli Eagles.</p><p>La partita ha visto diversi incontri chiave, tra cui l'attacco di corsa dei Ravens guidato da Derrick Henry contro i sette giocatori di prima linea degli Eagles. Zay Flowers ha continuato la sua impressionante stagione da esordiente per i Ravens.</p><p>Momenti salienti della partita:</p><ul><li>Prestazione a doppia minaccia di Lamar Jackson</li><li>Regolazioni difensive degli Eagles</li><li>Prestazioni chiave delle linee offensive di entrambe le squadre</li></ul>",
+      "category": "Sportivi",
+      "tags": [
+        "La NFL",
+        "Aquile",
+        "Corvi",
+        "Lamar Jackson"
+      ],
+      "author": "Squadra sportiva",
+      "readingTime": "3",
+      "publishDate": "2024-12-01T00:30:00Z"
+    },
+    "seahawks-jets-nfl-2024": {
+      "title": "I Seahawks ospitano i Jets nella settimana 13 della NFL",
+      "description": "Geno Smith guida i Seahawks contro i Jets in difficoltà in un incontro cruciale",
+      "content": "<p>I Seattle Seahawks, guidati dal quarterback Geno Smith, hanno ospitato i New York Jets in una partita della settimana 13 con implicazioni per i playoff. Smith, di fronte alla sua ex squadra, mirava a mantenere vive le speranze di playoff di Seattle nella competitiva NFC West.</p><p>Il running back esordiente Zach Charbonnet è emerso come un giocatore chiave per l'attacco dei Seahawks, mentre i Jets continuano a cercare continuità in attacco.</p><p>Trame chiave:</p><ul><li>Prestazione di Geno Smith contro la sua ex squadra</li><li>Posizionamento dei Seahawks nei playoff</li><li>Difficoltà offensive dei Jets</li><li>Impatto del rookie Zach Charbonnet</li></ul>",
+      "category": "Sportivi",
+      "tags": [
+        "La NFL",
+        "I falchi del mare",
+        "Getti",
+        "Settimana 13"
+      ],
+      "author": "Squadra sportiva",
+      "readingTime": "3",
+      "publishDate": "2024-12-01T10:00:00Z"
+    },
+    "cardinals-vikings-nfl-2024": {
+      "title": "Cardinals vs Vikings: implicazioni per i playoff NFC",
+      "description": "Sam Darnold e i Cardinals affrontano i Vikings in un match chiave della NFC",
+      "content": "<p>Gli Arizona Cardinals, con il quarterback Sam Darnold al timone, hanno affrontato i Minnesota Vikings in una partita con implicazioni significative per i playoff della NFC. La difesa dei Vikings, guidata da giocatori veterani, ha cercato di contenere le minacce offensive dei Cardinals.</p><p>L'assenza di Kyler Murray ha continuato a influenzare la strategia offensiva dei Cardinals, mentre i Vikings miravano a mantenere la loro posizione nella corsa alla NFC North.</p><p>Punti focali della partita:</p><ul><li>Prestazione di Sam Darnold come titolare</li><li>Strategia difensiva dei Vikings</li><li>Impatto sul quadro dei playoff della NFC</li><li>Infortuni chiave che hanno interessato entrambe le squadre</li></ul>",
+      "category": "Sportivi",
+      "tags": [
+        "La NFL",
+        "Cardinali",
+        "Vichinghi",
+        "Non-FC"
+      ],
+      "author": "Squadra sportiva",
+      "readingTime": "3",
+      "publishDate": "2024-12-01T10:00:00Z"
+    },
+    "liverpool-man-city-epl-2024": {
+      "title": "Liverpool vs Manchester City: corsa al titolo di Premier League",
+      "description": "Il City di Pep Guardiola affronta il Liverpool in uno scontro cruciale in Premier League",
+      "content": "<p>Liverpool e Manchester City, due giganti della Premier League, si sono scontrati in una partita che potrebbe avere un impatto significativo sulla corsa al titolo. L'approccio tattico di Pep Guardiola si è scontrato con lo stile ad alta intensità del Liverpool ad Anfield.</p><p>Erling Haaland ha guidato l'attacco del City, mentre Cody Gakpo del Liverpool ha cercato di avere un impatto in questa partita cruciale. La partita ha evidenziato la rivalità in corso tra due delle migliori squadre inglesi.</p><p>Momenti salienti della partita:</p><ul><li>Sfida tattica tra i migliori allenatori</li><li>Forma di Haaland in termini di gol</li><li>Vantaggio casalingo del Liverpool ad Anfield</li><li>Impatto sulla classifica della Premier League</li></ul>",
+      "category": "Sportivi",
+      "tags": [
+        "Lega di Prima Categoria",
+        "Liverpool",
+        "Città di Manchester",
+        "Calcio"
+      ],
+      "author": "Squadra sportiva",
+      "readingTime": "4",
+      "publishDate": "2024-12-01T10:00:00Z"
+    },
+    "byu-houston-football-2024": {
+      "title": "La BYU affronta Houston nella sfida di conference",
+      "description": "I BYU Cougars affrontano Houston in una partita cruciale della conference",
+      "content": "<p>I BYU Cougars hanno affrontato gli Houston Cougars in un cruciale incontro di conference che ha avuto implicazioni significative per le stagioni di entrambe le squadre. L'attacco della BYU, guidato da playmaker chiave, ha cercato di stabilire il predominio all'inizio della partita.</p><p>Il quarterback di Houston Zeon Chriss ha cercato di continuare la sua recente forma positiva contro la difesa della BYU. La partita ha segnato un'importante pietra miliare nella classifica di conference di entrambi i programmi.</p><p>Elementi chiave:</p><ul><li>Implicazioni sulla classifica di conference</li><li>Strategia offensiva della BYU</li><li>Adeguamenti difensivi di Houston</li><li>Impatto sui giocatori di entrambe le squadre</li></ul>",
+      "category": "Sportivi",
+      "tags": [
+        "Calcio universitario",
+        "Università di Brisbane",
+        "houston-città",
+        "Nazionale"
+      ],
+      "author": "Squadra sportiva",
+      "readingTime": "3",
+      "publishDate": "2024-11-30T23:20:00Z"
+    },
+    "miami-hurricanes-acc-2024": {
+      "title": "Miami Hurricanes Football: Anteprima della partita per il titolo ACC",
+      "description": "Miami affronta Syracuse con implicazioni per il campionato ACC",
+      "content": "<p>Il programma di football dei Miami Hurricanes si è preparato per un cruciale incontro ACC contro Syracuse, con importanti implicazioni per il titolo di conference in palio. Sotto la guida dell'allenatore Mario Cristobal, Miami ha cercato di rafforzare la propria posizione nella classifica ACC.</p><p>La partita ha anche segnato un momento significativo per Syracuse, che si è adattata ai recenti cambiamenti di allenatore con Fran Brown alla guida del programma.</p><p>Punti di anteprima della partita:</p><ul><li>Implicazioni per il campionato ACC</li><li>Strategia offensiva di Miami</li><li>Transizione di allenatore di Syracuse</li><li>Scontri chiave tra i giocatori</li><li>Impatto sugli scenari delle partite di bowl</li></ul>",
+      "category": "Sportivi",
+      "tags": [
+        "Calcio universitario",
+        "Uragani di Miami",
+        "ACC",
+        "Siracusa"
+      ],
+      "author": "Squadra sportiva",
+      "readingTime": "3",
+      "publishDate": "2024-11-30T18:30:00Z"
     }
   }
 }
