--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -29,17 +29,17 @@
     }
   },
   "seo": {
-    "title": "AIテクノロジーのニュースと最新情報",
-    "description": "人工知能、テクノロジー、デジタルイノベーションに関する最新ニュースと洞察",
-    "siteUrl": "https://www.ainews.com/",
-    "keywords": "AIニュース、テクノロジーニュース、人工知能、デジタルイノベーション、テクノロジーアップデート"
+    "title": "最新ニュースとアップデート - TrendNews",
+    "description": "世界中の最新ニュース、スポーツの最新情報、トレンドのニュースを常にチェックしましょう",
+    "siteUrl": "https://www.trendnews.com/",
+    "keywords": "トレンドニュース、スポーツニュース、最新情報、時事ニュース"
   },
   "categories": {
-    "ai": "人工知能",
+    "sports": "スポーツ",
+    "politics": "政治",
     "technology": "テクノロジー",
-    "innovation": "革新",
-    "research": "研究",
-    "development": "発達",
+    "entertainment": "エンターテインメント",
+    "business": "仕事",
     "featured": "特集",
     "trending": "トレンド",
     "latest": "最新"
@@ -49,36 +49,140 @@
     "contact": "お問い合わせ",
     "privacy": "プライバシーポリシー",
     "terms": "利用規約",
-    "copyright": "© 2024 AI News。無断転載を禁じます。"
+    "copyright": "© 2024 TrendNews。無断転載を禁じます。"
   },
   "news": {
-    "ai-breakthrough-2024": {
-      "title": "AIの大きな進歩：新しいモデルが人間レベルの理解力を示す",
-      "description": "画期的な新しい AI モデルは、自然言語理解と問題解決能力において前例のない機能を発揮します。",
-      "content": "詳しい記事内容はこちらをご覧ください...",
-      "category": "人工知能",
+    "texas-longhorns-vs-am-2024": {
+      "title": "テキサス・ロングホーンズ対テキサスA&M: 歴史的なライバル関係が再燃",
+      "description": "テキサス・ロングホーンズとテキサスA&M大学がSEC初対戦で対戦し、ジャスティン・タッカーの功績が記憶される",
+      "content": "<p>全国の大学フットボールファンを魅了した待望の対戦で、テキサス ロングホーンズとテキサス A&M アギーズが歴史的なライバル関係を再開しました。この試合は、ジャスティン タッカーを含む伝説のロングホーンズ選手の記憶を呼び起こしました。彼の決定的なパフォーマンスは、プログラムの歴史に刻まれています。</p><p>クイン エワーズがロングホーンズの攻撃をリードし、NFL の伝説の選手ペイトン マニングとイーライ マニングの甥である、高く評価されている新入生アーチ マニングがサイドラインで待機していました。この試合は、現在 NFL で最も正確なキッカーの 1 人であるジャスティン タッカーなどの NFL スターを輩出してきた、名高いテキサス フットボール プログラムの新たな章を刻みました。</p><p>この試合の注目すべき統計は次のとおりです。</p><ul><li>スタジアムに 10 万人を超える観客が集まりました</li><li>SEC に加入して以来、両チームが初めて対戦しました</li><li>クイン エワーズが重要なパスを成功させました</li></ul>",
+      "category": "スポーツ",
       "tags": [
-        "人工知能",
-        "機械学習",
-        "テクノロジー"
+        "大学フットボール",
+        "テキサス",
+        "SEC"
       ],
-      "author": "AIニュースチーム",
-      "readingTime": "5分",
-      "publishDate": "2024-03-30T10:00:00Z"
+      "author": "スポーツチーム",
+      "readingTime": "4",
+      "publishDate": "2024-12-01T16:50:00Z"
     },
-    "tech-innovation-2024": {
-      "title": "革命的な量子コンピューティングの進歩",
-      "description": "科学者たちは量子コンピューティングの安定性において大きなマイルストーンを達成しました。",
-      "content": "詳しい記事内容はこちらをご覧ください...",
-      "category": "テクノロジー",
+    "kash-patel-fbi-2024": {
+      "title": "カシュ・パテル：トランプ前政権高官、FBIの役職に考慮",
+      "description": "トランプ政権の元高官カシュ・パテル氏がFBI長官候補に浮上",
+      "content": "<p>ワシントンで大きな動きがあり、トランプ政権の元高官であるカシュ・パテル氏がFBI長官の有力候補として浮上しました。このニュースは政界全体で大きな関心と議論を呼びました。</p><p>国家安全保障と諜報の役職で以前務めていたことで知られるパテル氏は、将来のFBIの指導者に関する議論が続く中、注目の的となっています。</p><p>カシュ・パテル氏に関する重要なポイント:</p><ul><li>国防長官代行の元首席補佐官</li><li>国家安全保障の役職での経験</li><li>諜報活動の経歴</li></ul>",
+      "category": "政治",
       "tags": [
-        "量子コンピューティング",
-        "革新",
-        "研究"
+        "FBI",
+        "政治",
+        "ワシントン"
       ],
-      "author": "テックニュースチーム",
-      "readingTime": "4分",
-      "publishDate": "2024-03-29T15:30:00Z"
+      "author": "政治チーム",
+      "readingTime": "3",
+      "publishDate": "2024-11-30T18:50:00Z"
+    },
+    "trevor-lawrence-injury-2024": {
+      "title": "トレバー・ローレンス、テキサンズ対ジャガーズ戦で負傷",
+      "description": "ジャガーズのQBトレバー・ローレンスがテキサンズ戦で重傷を負い、担架で退場",
+      "content": "<p>ジャクソンビル ジャガーズのクォーターバック、トレバー ローレンスは、今日のヒューストン テキサンズとの試合中に、大きなヒットを受けてフィールドから運び出されました。この事件は、重要な地区対抗戦の第 3 クォーターに発生しました。</p><p>最初の報告によると、ローレンスはテキサンズのラインバッカー、アジーズ アルシャイルからのヒットを受けて脳震盪の疑いがあると診断されました。この負傷により、シーズン終盤に差し掛かるジャガーズのプレーオフ進出の望みが危ぶまれています。</p><p>主な進展:</p><ul><li>ローレンスは第 3 クォーターに運び出されました</li><li>脳震盪の可能性について診断中</li><li>控えクォーターバックが試合の任務を引き継ぎました</li></ul>",
+      "category": "スポーツ",
+      "tags": [
+        "NFL",
+        "ジャガー",
+        "負傷ニュース"
+      ],
+      "author": "スポーツチーム",
+      "readingTime": "4",
+      "publishDate": "2024-12-01T09:30:00Z"
+    },
+    "eagles-ravens-matchup-2024": {
+      "title": "イーグルスがスーパーボウル出場候補対決でレイブンズと対戦",
+      "description": "ラマー・ジャクソンとイーグルスの守備陣が重要なカンファレンス間対戦の主役に",
+      "content": "<p>フィラデルフィア イーグルスとボルチモア レイブンズが、スーパーボウル出場候補の 2 チームによる注目の一戦で対決しました。レイブンズのクォーターバック、ラマー ジャクソンは、イーグルスの強力なディフェンスを相手に、ダイナミックなプレイメイキング能力を披露しました。</p><p>この試合では、デリック ヘンリー率いるレイブンズのラッシュ攻撃とイーグルスのフロント 7 の対戦など、いくつかの重要なマッチアップが見られました。ゼイ フラワーズは、レイブンズで印象的なルーキー シーズンを続けました。</p><p>試合のハイライト:</p><ul><li>ラマー ジャクソンのデュアル スレット パフォーマンス</li><li>イーグルスのディフェンス調整</li><li>両チームのオフェンス ラインの重要なパフォーマンス</li></ul>",
+      "category": "スポーツ",
+      "tags": [
+        "NFL",
+        "イーグルス",
+        "レイブンズ",
+        "ラマー・ジャクソン"
+      ],
+      "author": "スポーツチーム",
+      "readingTime": "3",
+      "publishDate": "2024-12-01T00:30:00Z"
+    },
+    "seahawks-jets-nfl-2024": {
+      "title": "シーホークスがNFL第13週でジェッツと対戦",
+      "description": "ジェノ・スミスがシーホークスを率いて苦戦中のジェッツと重要な対戦",
+      "content": "<p>クォーターバックのジェノ・スミス率いるシアトル・シーホークスは、プレーオフを左右する第 13 週の対戦でニューヨーク・ジェッツを迎え撃った。スミスは古巣と対戦し、激戦が予想される NFC 西地区でシアトルのプレーオフ進出の望みをつなぎとめようとした。</p><p>新人ランニングバックのザック・シャルボネットはシーホークスの攻撃陣のキープレーヤーとして台頭し、ジェッツは攻撃面での一貫性を模索し続けている。</p><p>主なストーリー:</p><ul><li>ジェノ・スミスの古巣相手のパフォーマンス</li><li>シーホークスのプレーオフでの立ち位置</li><li>ジェッツの攻撃陣の苦戦</li><li>新人ザック・シャルボネットの影響</li></ul>",
+      "category": "スポーツ",
+      "tags": [
+        "NFL",
+        "シーホークス",
+        "ジェッツ",
+        "第13週"
+      ],
+      "author": "スポーツチーム",
+      "readingTime": "3",
+      "publishDate": "2024-12-01T10:00:00Z"
+    },
+    "cardinals-vikings-nfl-2024": {
+      "title": "カーディナルス対バイキングス：NFCプレーオフへの影響",
+      "description": "サム・ダーノルドとカーディナルスがNFCの重要対戦でバイキングスと対戦",
+      "content": "<p>クォーターバックのサム・ダーノルドが指揮を執るアリゾナ・カーディナルスは、NFCプレーオフに大きく影響する試合でミネソタ・バイキングスと対戦した。ベテラン選手が率いるバイキングスの守備陣は、カーディナルスの攻撃の脅威を抑えようとした。</p><p>カイラー・マレーの不在はカーディナルスの攻撃戦略に引き続き影響を及ぼし、バイキングスはNFC北地区の争いでの地位維持を目指した。</p><p>試合の注目点:</p><ul><li>サム・ダーノルドの先発としてのパフォーマンス</li><li>バイキングスの守備戦略</li><li>NFCプレーオフへの影響</li><li>両チームに影響する主要な負傷者</li></ul>",
+      "category": "スポーツ",
+      "tags": [
+        "NFL",
+        "カージナルス",
+        "バイキング",
+        "非対称"
+      ],
+      "author": "スポーツチーム",
+      "readingTime": "3",
+      "publishDate": "2024-12-01T10:00:00Z"
+    },
+    "liverpool-man-city-epl-2024": {
+      "title": "リバプール対マンチェスター・シティ：プレミアリーグ優勝争い",
+      "description": "ペップ・グアルディオラのシティがプレミアリーグの重要な一戦でリバプールと対戦",
+      "content": "<p>プレミアリーグの2大巨頭、リバプールとマンチェスター・シティが、タイトル争いに大きな影響を与える可能性のある試合で激突した。アンフィールドでは、ペップ・グアルディオラの戦術的アプローチがリバプールの激しいスタイルと対決した。</p><p>アーリング・ハーランドがシティの攻撃をリードし、リバプールのコディ・ガクポはこの重要な試合でインパクトを残そうとした。この試合は、イングランドのトップチーム2チーム間の継続的なライバル関係を浮き彫りにした。</p><p>試合のハイライト:</p><ul><li>トップマネージャー間の戦術的戦い</li><li>ハーランドのゴールスコアリングフォーム</li><li>アンフィールドでのリバプールのホームアドバンテージ</li><li>プレミアリーグの順位への影響</li></ul>",
+      "category": "スポーツ",
+      "tags": [
+        "プレミアリーグ",
+        "リバプール",
+        "マンチェスター・シティ",
+        "サッカー"
+      ],
+      "author": "スポーツチーム",
+      "readingTime": "4",
+      "publishDate": "2024-12-01T10:00:00Z"
+    },
+    "byu-houston-football-2024": {
+      "title": "BYUがカンファレンスマッチアップでヒューストンと対戦",
+      "description": "BYUクーガーズが重要なカンファレンス戦でヒューストンと対戦",
+      "content": "<p>BYU クーガーズは、両チームのシーズンに大きな影響を与える重要なカンファレンス マッチアップでヒューストン クーガーズと対戦しました。キー プレイメーカーが率いる BYU の攻撃陣は、試合序盤から優位に立つことを目指しました。</p><p>ヒューストンのクォーターバック、ゼオン クリスは、BYU のディフェンスに対して、最近の好調さを継続することを目指しました。この試合は、両チームのカンファレンス順位にとって重要な節目となりました。</p><p>主な要素:</p><ul><li>カンファレンス順位への影響</li><li>BYU の攻撃戦略</li><li>ヒューストンのディフェンス調整</li><li>両チームのインパクト プレーヤー</li></ul>",
+      "category": "スポーツ",
+      "tags": [
+        "大学フットボール",
+        "BYU",
+        "ヒューストン",
+        "NCAA"
+      ],
+      "author": "スポーツチーム",
+      "readingTime": "3",
+      "publishDate": "2024-11-30T23:20:00Z"
+    },
+    "miami-hurricanes-acc-2024": {
+      "title": "マイアミ ハリケーンズ フットボール: ACC タイトル ゲーム プレビュー",
+      "description": "マイアミはACCチャンピオンシップをかけてシラキュースと対戦",
+      "content": "<p>マイアミ ハリケーンズのフットボール プログラムは、カンファレンス タイトル獲得の大きな意味を持つシラキュースとの重要な ACC 対戦に備えました。ヘッド コーチのマリオ クリストバルのもと、マイアミは ACC の順位表での地位を強化しようとしました。</p><p>この試合は、フラン ブラウンがプログラムを率いる最近のコーチ交代に適応したシラキュースにとっても重要な瞬間となりました。</p><p>ゲーム プレビュー ポイント:</p><ul><li>ACC チャンピオンシップへの影響</li><li>マイアミの攻撃戦略</li><li>シラキュースのコーチ交代</li><li>主要選手の対戦</li><li>ボウル ゲーム シナリオへの影響</li></ul>",
+      "category": "スポーツ",
+      "tags": [
+        "大学フットボール",
+        "マイアミハリケーンズ",
+        "オーストラリア中央委員会",
+        "シラキュース"
+      ],
+      "author": "スポーツチーム",
+      "readingTime": "3",
+      "publishDate": "2024-11-30T18:30:00Z"
     }
   }
 }
