--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -29,17 +29,17 @@
     }
   },
   "seo": {
-    "title": "AI 기술 뉴스 및 업데이트",
-    "description": "인공지능, 기술, 디지털 혁신에 대한 최신 뉴스 및 통찰력",
-    "siteUrl": "https://www.ainews.com/",
-    "keywords": "AI 뉴스, 기술 뉴스, 인공지능, 디지털 혁신, 기술 업데이트"
+    "title": "최신 뉴스 및 업데이트 - TrendNews",
+    "description": "전 세계의 최신 뉴스, 스포츠 업데이트 및 인기 스토리를 받아보세요.",
+    "siteUrl": "https://www.trendnews.com/",
+    "keywords": "트렌딩 뉴스, 스포츠 뉴스, 최신 업데이트, 시사"
   },
   "categories": {
-    "ai": "인공지능",
+    "sports": "스포츠",
+    "politics": "정치",
     "technology": "기술",
-    "innovation": "혁신",
-    "research": "연구",
-    "development": "개발",
+    "entertainment": "오락",
+    "business": "사업",
     "featured": "추천",
     "trending": "트렌드",
     "latest": "최신"
@@ -49,36 +49,140 @@
     "contact": "문의하기",
     "privacy": "개인정보 보호정책",
     "terms": "이용 약관",
-    "copyright": "© 2024 AI News. 모든 권리 보유."
+    "copyright": "© 2024 TrendNews. 모든 권리 보유."
   },
   "news": {
-    "ai-breakthrough-2024": {
-      "title": "주요 AI 혁신: 새로운 모델이 인간 수준의 이해를 보여줌",
-      "description": "획기적인 새로운 AI 모델은 자연어 이해와 문제 해결 능력 면에서 전례 없는 역량을 보여주었습니다.",
-      "content": "자세한 기사 내용은 여기를 참조하세요...",
-      "category": "일체 포함",
+    "texas-longhorns-vs-am-2024": {
+      "title": "텍사스 롱혼스 대 텍사스 A&M: 역사적인 라이벌 관계 재개",
+      "description": "Justin Tucker의 유산, Texas Longhorns와 Texas A&M의 첫 SEC 경기에서 기억되다",
+      "content": "<p>전국의 대학 풋볼 팬들을 사로잡은 기대되는 경기에서 Texas Longhorns와 Texas A&M Aggies는 역사적인 라이벌 관계를 다시 한번 보여주었습니다. 이 경기는 Justin Tucker를 포함한 전설적인 Longhorns 선수들의 추억을 되살려 주었습니다. 그의 클러치 퍼포먼스는 이 프로그램의 역사에 새겨져 있습니다.</p><p>Quinn Ewers는 Longhorns의 공격을 이끌었고, NFL의 전설 Peyton과 Eli Manning의 조카인 신입생 Arch Manning은 사이드라인에서 대기했습니다. 이 경기는 현재 NFL에서 가장 정확한 키커 중 한 명인 Justin Tucker와 같은 NFL 스타를 배출한 유서 깊은 Texas 풋볼 프로그램의 또 다른 장을 열었습니다.</p><p>경기의 주목할 만한 통계는 다음과 같습니다.</p><ul><li>경기장에 100,000명 이상의 관중</li><li>SEC에 합류한 이후 두 팀 간의 첫 만남</li><li>Quinn Ewers가 키 패스를 완료</li></ul>",
+      "category": "스포츠",
       "tags": [
-        "일체 포함",
-        "머신러닝",
-        "기술"
+        "대학 풋볼",
+        "텍사스",
+        "비서"
       ],
-      "author": "AI 뉴스팀",
-      "readingTime": "5분",
-      "publishDate": "2024-03-30T10:00:00Z"
+      "author": "스포츠 팀",
+      "readingTime": "4",
+      "publishDate": "2024-12-01T16:50:00Z"
     },
-    "tech-innovation-2024": {
-      "title": "혁신적인 양자 컴퓨팅 발전",
-      "description": "과학자들은 양자 컴퓨팅 안정성 측면에서 주요 이정표를 달성했습니다.",
-      "content": "자세한 기사 내용은 여기를 참조하세요...",
-      "category": "기술",
+    "kash-patel-fbi-2024": {
+      "title": "캐시 파텔: 전 트럼프 관리, FBI 역할 고려",
+      "description": "트럼프 행정부 전직 관리 캐시 파텔, FBI 국장 후보로 부상",
+      "content": "<p>워싱턴에서 중요한 사건으로, 트럼프 행정부의 전 관리였던 캐시 파텔이 FBI 국장 후보로 떠올랐습니다. 이 소식은 정계에서 상당한 관심과 논의를 불러일으켰습니다.</p><p>국가 안보 및 정보 직책에서 이전에 맡았던 역할로 알려진 파텔은 미래 FBI 리더십에 대한 논의가 계속되면서 주목의 초점이 되었습니다.</p><p>캐시 파텔에 대한 주요 사항:</p><ul><li>전 국방장관 대행의 참모장</li><li>국가 안보 역할에서의 이전 경험</li><li>정보 작전 배경</li></ul>",
+      "category": "정치",
       "tags": [
-        "양자 컴퓨팅",
-        "혁신",
-        "연구"
+        "FBI",
+        "정치",
+        "워싱턴"
       ],
-      "author": "기술 뉴스 팀",
-      "readingTime": "4분",
-      "publishDate": "2024-03-29T15:30:00Z"
+      "author": "정치팀",
+      "readingTime": "3",
+      "publishDate": "2024-11-30T18:50:00Z"
+    },
+    "trevor-lawrence-injury-2024": {
+      "title": "트레버 로렌스, 텍사스 대 재규어스 경기에서 부상",
+      "description": "재규어스 QB 트레버 로렌스, 텍사스전에서 심각한 타격을 받은 후 퇴장",
+      "content": "<p>Jacksonville Jaguars 쿼터백 Trevor Lawrence는 오늘 Houston Texans와의 경기에서 심각한 타격을 받은 후 경기장에서 끌려나갔습니다. 이 사건은 중요한 디비전 경기였던 3쿼터에 발생했습니다.</p><p>초기 보고서에 따르면 Lawrence는 Texans 라인배커 Azeez Al-Shaair의 타격 후 뇌진탕으로 진단을 받았습니다. 이 부상으로 인해 시즌의 마지막 구간을 헤쳐 나가는 Jaguars의 플레이오프 희망에 대한 우려가 제기되었습니다.</p><p>주요 동향:</p><ul><li>Lawrence는 3쿼터에 끌려나갔습니다.</li><li>뇌진탕 가능성에 대한 진단을 받고 있습니다.</li><li>백업 쿼터백이 경기 임무를 맡았습니다.</li></ul>",
+      "category": "스포츠",
+      "tags": [
+        "NFL",
+        "재규어",
+        "부상 소식"
+      ],
+      "author": "스포츠 팀",
+      "readingTime": "4",
+      "publishDate": "2024-12-01T09:30:00Z"
+    },
+    "eagles-ravens-matchup-2024": {
+      "title": "이글스, 슈퍼볼 경쟁자 격돌에서 레이븐스와 맞붙다",
+      "description": "라마 잭슨과 이글스 수비가 주요 컨퍼런스 간 대결의 헤드라인을 장식",
+      "content": "<p>필라델피아 이글스와 볼티모어 레이븐스는 두 슈퍼볼 경쟁자 간의 기대되는 경기에서 맞붙었습니다. 레이븐스 쿼터백 라마 잭슨은 이글스의 강력한 수비에 맞서 역동적인 플레이메이킹 능력을 보여주었습니다.</p><p>이 경기에서는 데릭 헨리가 이끄는 레이븐스의 러싱 어택과 이글스의 프론트 세븐을 상대로 한 주요 매치업이 여러 개 있었습니다. 제이 플라워스는 레이븐스에서 인상적인 신인 시즌을 이어갔습니다.</p><p>경기 하이라이트:</p><ul><li>라마 잭슨의 듀얼 위협 성과</li><li>이글스의 수비 조정</li><li>두 팀 공격 라인의 주요 성과</li></ul>",
+      "category": "스포츠",
+      "tags": [
+        "NFL",
+        "독수리",
+        "까마귀",
+        "라마 잭슨"
+      ],
+      "author": "스포츠 팀",
+      "readingTime": "3",
+      "publishDate": "2024-12-01T00:30:00Z"
+    },
+    "seahawks-jets-nfl-2024": {
+      "title": "시호크스, 13주차 NFL 경기에서 제츠와 맞붙다",
+      "description": "제노 스미스, 중요한 경기에서 부진한 제츠를 상대로 시호크스를 이끈다",
+      "content": "<p>쿼터백 제노 스미스가 이끄는 시애틀 시호크스는 플레이오프에 영향을 미치는 13주차 경기에서 뉴욕 제츠를 맞이했습니다. 이전 팀과 맞붙은 스미스는 경쟁이 치열한 NFC 서부에서 시애틀의 플레이오프 희망을 살리고자 했습니다.</p><p>신인 러닝백 Zach Charbonnet이 시호크스 공격의 핵심 선수로 떠올랐고, 제츠는 공격에서 일관성을 계속 추구하고 있습니다.</p><p>주요 스토리라인:</p><ul><li>제노 스미스의 이전 팀과의 경기</li><li>시호크스의 플레이오프 포지셔닝</li><li>제츠의 공격적 어려움</li><li>신인 Zach Charbonnet의 영향</li></ul>",
+      "category": "스포츠",
+      "tags": [
+        "NFL",
+        "시호크스",
+        "제트기",
+        "13주차"
+      ],
+      "author": "스포츠 팀",
+      "readingTime": "3",
+      "publishDate": "2024-12-01T10:00:00Z"
+    },
+    "cardinals-vikings-nfl-2024": {
+      "title": "카디널스 vs 바이킹스: NFC 플레이오프 의미",
+      "description": "샘 달놀드와 카디널스는 NFC의 주요 경기에서 바이킹스와 맞붙는다",
+      "content": "<p>쿼터백 샘 달놀드가 지휘봉을 잡은 애리조나 카디널스는 NFC 플레이오프에 상당한 영향을 미치는 경기에서 미네소타 바이킹스와 맞붙었습니다. 베테랑 선수들이 이끄는 바이킹스의 수비는 카디널스의 공격 위협을 막고자 했습니다.</p><p>카일러 머레이의 부재는 카디널스의 공격 전략에 계속 영향을 미쳤고, 바이킹스는 NFC 북부 경쟁에서 자신의 위치를 ​​유지하려고 했습니다.</p><p>경기 초점 포인트:</p><ul><li>선발 선수로서의 샘 달놀드의 성과</li><li>바이킹스의 수비 전략</li><li>NFC 플레이오프 상황에 미치는 영향</li><li>양 팀에 영향을 미치는 주요 부상</li></ul>",
+      "category": "스포츠",
+      "tags": [
+        "NFL",
+        "카디널스",
+        "바이킹",
+        "근거리 무선 통신"
+      ],
+      "author": "스포츠 팀",
+      "readingTime": "3",
+      "publishDate": "2024-12-01T10:00:00Z"
+    },
+    "liverpool-man-city-epl-2024": {
+      "title": "리버풀 vs 맨체스터 시티: 프리미어 리그 타이틀 경쟁",
+      "description": "펩 과르디올라의 시티, 중요한 프리미어 리그 경기에서 리버풀과 맞붙다",
+      "content": "<p>프리미어 리그의 두 거인 리버풀과 맨체스터 시티가 타이틀 경쟁에 큰 영향을 미칠 수 있는 경기에서 맞붙었습니다. 펩 과르디올라의 전술적 접근 방식은 안필드에서 리버풀의 고강도 스타일과 맞붙었습니다.</p><p>엘링 할란드가 시티의 공격을 이끌었고, 리버풀의 코디 각포는 이 중요한 경기에서 영향력을 행사하고자 했습니다. 이 경기는 영국의 두 최고 팀 간의 지속적인 라이벌 관계를 강조했습니다.</p><p>경기 하이라이트:</p><ul><li>최고 감독 간의 전술적 대결</li><li>할란드의 골 득점 폼</li><li>안필드에서 리버풀의 홈 어드밴티지</li><li>프리미어 리그 순위에 미치는 영향</li></ul>",
+      "category": "스포츠",
+      "tags": [
+        "프리미어 리그",
+        "리버풀",
+        "맨체스터 시티",
+        "축구"
+      ],
+      "author": "스포츠 팀",
+      "readingTime": "4",
+      "publishDate": "2024-12-01T10:00:00Z"
+    },
+    "byu-houston-football-2024": {
+      "title": "BYU, 컨퍼런스 매치업에서 휴스턴과 맞붙다",
+      "description": "BYU 쿠거스, 중요한 컨퍼런스 경기에서 휴스턴과 맞붙다",
+      "content": "<p>BYU 쿠거스는 중요한 컨퍼런스 매치업에서 휴스턴 쿠거스와 맞붙었고, 이는 두 팀의 시즌에 중대한 영향을 미쳤습니다. 핵심 플레이메이커가 이끄는 BYU의 공격은 경기 초반에 우위를 점하려 했습니다.</p><p>휴스턴의 쿼터백 지온 크리스는 BYU 수비를 상대로 최근의 강력한 폼을 이어가려 했습니다. 이 경기는 두 프로그램의 컨퍼런스 순위에서 중요한 이정표를 세웠습니다.</p><p>핵심 요소:</p><ul><li>컨퍼런스 순위 의미</li><li>BYU의 공격 전략</li><li>휴스턴의 수비 조정</li><li>양쪽 선수에게 미치는 영향</li></ul>",
+      "category": "스포츠",
+      "tags": [
+        "대학 풋볼",
+        "브리검 영 대학교",
+        "휴스턴",
+        "미국 국립 대학"
+      ],
+      "author": "스포츠 팀",
+      "readingTime": "3",
+      "publishDate": "2024-11-30T23:20:00Z"
+    },
+    "miami-hurricanes-acc-2024": {
+      "title": "마이애미 허리케인스 풋볼: ACC 타이틀 게임 미리보기",
+      "description": "마이애미, ACC 챔피언십에 영향을 미치는 시러큐스와 맞붙다",
+      "content": "<p>마이애미 허리케인스 풋볼 프로그램은 시러큐스와의 중요한 ACC 매치업을 준비했는데, 이는 컨퍼런스 타이틀에 큰 영향을 미칠 수 있는 일이었습니다. 마이애미는 마리오 크리스토발 감독의 지도 하에 ACC 순위에서 입지를 강화하고자 했습니다.</p><p>이 경기는 또한 시러큐스에게 중요한 순간이었는데, 프랜 브라운이 프로그램을 이끌면서 최근 코칭 교체에 적응했기 때문입니다.</p><p>경기 미리보기 요점:</p><ul><li>ACC 챔피언십 영향</li><li>마이애미의 공격 전략</li><li>시러큐스의 코칭 전환</li><li>주요 선수 매치업</li><li>볼 게임 시나리오에 미치는 영향</li></ul>",
+      "category": "스포츠",
+      "tags": [
+        "대학 풋볼",
+        "마이애미 허리케인스",
+        "ACC",
+        "시러큐스"
+      ],
+      "author": "스포츠 팀",
+      "readingTime": "3",
+      "publishDate": "2024-11-30T18:30:00Z"
     }
   }
 }
