--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -29,17 +29,17 @@
     }
   },
   "seo": {
-    "title": "Новости и обновления технологий искусственного интеллекта",
-    "description": "Последние новости и аналитика об искусственном интеллекте, технологиях и цифровых инновациях",
-    "siteUrl": "https://www.ainews.com/",
-    "keywords": "Новости ИИ, новости технологий, искусственный интеллект, цифровые инновации, технические обновления"
+    "title": "Последние новости и обновления - TrendNews",
+    "description": "Будьте в курсе последних новостей, спортивных событий и популярных историй со всего мира.",
+    "siteUrl": "https://www.trendnews.com/",
+    "keywords": "трендовые новости, спортивные новости, последние обновления, текущие события"
   },
   "categories": {
-    "ai": "Искусственный интеллект",
+    "sports": "Спорт",
+    "politics": "Политика",
     "technology": "Технологии",
-    "innovation": "Инновации",
-    "research": "Исследовать",
-    "development": "Разработка",
+    "entertainment": "Развлечение",
+    "business": "Бизнес",
     "featured": "Избранное",
     "trending": "В тренде",
     "latest": "Последний"
@@ -49,36 +49,140 @@
     "contact": "Контакты",
     "privacy": "политика конфиденциальности",
     "terms": "Условия эксплуатации",
-    "copyright": "© 2024 AI News. Все права защищены."
+    "copyright": "© 2024 TrendNews. Все права защищены."
   },
   "news": {
-    "ai-breakthrough-2024": {
-      "title": "Крупный прорыв в области искусственного интеллекта: новая модель демонстрирует понимание на уровне человека",
-      "description": "Новая революционная модель искусственного интеллекта демонстрирует беспрецедентные возможности в понимании естественного языка и решении проблем.",
-      "content": "Подробное содержание статьи здесь...",
-      "category": "ИИ",
+    "texas-longhorns-vs-am-2024": {
+      "title": "Texas Longhorns против Texas A&M: историческое соперничество возобновлено",
+      "description": "Наследие Джастина Такера вспоминают, когда Texas Longhorns и Texas A&M встречаются в своем первом матче SEC",
+      "content": "<p>В долгожданном матче, который пленил поклонников студенческого футбола по всей стране, Texas Longhorns и Texas A&M Aggies возобновили свое историческое соперничество. Игра вернула воспоминания о легендарных игроках Longhorns, включая Джастина Такера, чьи результативные выступления остались в истории программы.</p><p>Куинн Эверс возглавлял нападение Longhorns, в то время как высоко оцененный новичок Арч Мэннинг, племянник легенд NFL Пейтона и Эли Мэннинга, стоял наготове в сторонке. Игра ознаменовала собой новую главу в легендарной футбольной программе Техаса, которая подарила миру таких звезд НФЛ, как Джастин Такер, в настоящее время один из самых точных игроков НФЛ.</p><p>Примечательная статистика игры:</p><ul><li>Более 100 000 зрителей на стадионе</li><li>Первая встреча между командами с момента вступления в SEC</li><li>Куинн Эверс выполнил ключевые пасы</li></ul>",
+      "category": "Спорт",
       "tags": [
-        "ИИ",
-        "Машинное обучение",
-        "Технологии"
+        "Студенческий футбол",
+        "Техас",
+        "СЕЦ"
       ],
-      "author": "Команда новостей ИИ",
-      "readingTime": "5 мин.",
-      "publishDate": "2024-03-30T10:00:00Z"
+      "author": "Спортивная команда",
+      "readingTime": "4",
+      "publishDate": "2024-12-01T16:50:00Z"
     },
-    "tech-innovation-2024": {
-      "title": "Революционный прогресс квантовых вычислений",
-      "description": "Ученые достигли важного рубежа в стабильности квантовых вычислений.",
-      "content": "Подробное содержание статьи здесь...",
-      "category": "Технологии",
+    "kash-patel-fbi-2024": {
+      "title": "Кэш Патель: бывший чиновник Трампа рассматривается на должность в ФБР",
+      "description": "Бывший чиновник администрации Трампа Кэш Патель рассматривается в качестве потенциального кандидата на пост директора ФБР",
+      "content": "<p>Важным событием в Вашингтоне стало то, что Каш Патель, бывший чиновник администрации Трампа, стал потенциальным кандидатом на должность директора ФБР. Эта новость вызвала значительный интерес и обсуждение в политических кругах.</p><p>Патель, известный своими предыдущими ролями в национальной безопасности и разведке, стал центром внимания, поскольку продолжаются дискуссии о будущем руководстве ФБР.</p><p>Ключевые моменты о Каше Пателе:</p><ul><li>Бывший начальник штаба исполняющего обязанности министра обороны</li><li>Предыдущий опыт работы на должностях в сфере национальной безопасности</li><li>Бэкграунд в разведывательных операциях</li></ul>",
+      "category": "Политика",
       "tags": [
-        "Квантовые вычисления",
-        "Инновации",
-        "Исследовать"
+        "ФБР",
+        "Политика",
+        "Вашингтон"
       ],
-      "author": "Команда технических новостей",
-      "readingTime": "4 мин.",
-      "publishDate": "2024-03-29T15:30:00Z"
+      "author": "Политическая команда",
+      "readingTime": "3",
+      "publishDate": "2024-11-30T18:50:00Z"
+    },
+    "trevor-lawrence-injury-2024": {
+      "title": "Тревор Лоуренс получил травму в матче «Тексанс» — «Ягуарс»",
+      "description": "Квотербек «Ягуаров» Тревор Лоуренс был уволен после серьезного удара в матче против «Тексанс»",
+      "content": "<p>Квотербек Jacksonville Jaguars Тревор Лоуренс был унесен с поля во время сегодняшней игры против Houston Texans после серьезного удара. Инцидент произошел в третьей четверти решающего матча дивизиона.</p><p>Первоначальные отчеты предполагают, что Лоуренс был обследован на предмет сотрясения мозга после удара лайнбекера Texans Азиза Аль-Шаира. Травма вызвала опасения по поводу надежд Jaguars на участие в плей-офф, поскольку они находятся на последнем этапе сезона.</p><p>Ключевые события:</p><ul><li>Лоуренс был удален с поля в третьей четверти</li><li>Проходит обследование на предмет возможного сотрясения мозга</li><li>Запасной квотербек взял на себя обязанности по игре</li></ul>",
+      "category": "Спорт",
+      "tags": [
+        "НФЛ",
+        "Ягуары",
+        "Новости о травмах"
+      ],
+      "author": "Спортивная команда",
+      "readingTime": "4",
+      "publishDate": "2024-12-01T09:30:00Z"
+    },
+    "eagles-ravens-matchup-2024": {
+      "title": "«Иглз» встретятся с «Рэйвенс» в матче за Суперкубок",
+      "description": "Защита Ламара Джексона и «Иглз» возглавит ключевой матч между конференциями",
+      "content": "<p>Philadelphia Eagles и Baltimore Ravens встретились в долгожданном матче между двумя претендентами на Суперкубок. Квотербек Ravens Ламар Джексон продемонстрировал свои динамичные игровые способности против грозной защиты Eagles.</p><p>В игре было несколько ключевых матчей, включая стремительную атаку Ravens во главе с Дерриком Генри против передней семерки Eagles. Зей Флауэрс продолжил свой впечатляющий сезон новичка за Ravens.</p><p>Основные моменты игры:</p><ul><li>Двойная игра Ламара Джексона</li><li>Корректировки защиты Eagles</li><li>Ключевые выступления линий нападения обеих команд</li></ul>",
+      "category": "Спорт",
+      "tags": [
+        "НФЛ",
+        "Орлы",
+        "Вороны",
+        "Ламар Джексон"
+      ],
+      "author": "Спортивная команда",
+      "readingTime": "3",
+      "publishDate": "2024-12-01T00:30:00Z"
+    },
+    "seahawks-jets-nfl-2024": {
+      "title": "Seahawks принимает Jets в 13-й неделе NFL Action",
+      "description": "Джино Смит ведет «Сихокс» против «Джетс» в решающем матче",
+      "content": "<p>Seattle Seahawks, во главе с квотербеком Джино Смитом, принимали New York Jets в матче 13-й недели с последствиями плей-офф. Смит, столкнувшись со своей бывшей командой, стремился сохранить надежды Seattle на плей-офф в конкурентном NFC West.</p><p>Новичок-раннинбек Зак Шарбонне стал ключевым игроком в нападении Seahawks, в то время как Jets продолжают искать последовательность в нападении.</p><p>Ключевые сюжетные линии:</p><ul><li>Игра Джино Смита против своей бывшей команды</li><li>Позиционирование Seahawks в плей-офф</li><li>Проблемы Jets в нападении</li><li>Влияние новичка Зака ​​Шарбонне</li></ul>",
+      "category": "Спорт",
+      "tags": [
+        "НФЛ",
+        "Сихоукс",
+        "Самолеты",
+        "Неделя 13"
+      ],
+      "author": "Спортивная команда",
+      "readingTime": "3",
+      "publishDate": "2024-12-01T10:00:00Z"
+    },
+    "cardinals-vikings-nfl-2024": {
+      "title": "Cardinals против Vikings: последствия плей-офф NFC",
+      "description": "Сэм Дарнольд и «Кардиналс» встретятся с «Викингами» в ключевом матче NFC",
+      "content": "<p>Arizona Cardinals, с квотербеком Сэмом Дарнольдом у руля, столкнулись с Minnesota Vikings в игре, которая имела значительные последствия для плей-офф NFC. Защита Vikings, возглавляемая опытными игроками, по-видимому, сдерживала наступательные угрозы Cardinals.</p><p>Отсутствие Кайлера Мюррея продолжало влиять на наступательную стратегию Cardinals, в то время как Vikings стремились сохранить свои позиции в гонке NFC North.</p><p>Основные моменты игры:</p><ul><li>Игра Сэма Дарнольда в качестве стартового игрока</li><li>Защитная стратегия Vikings</li><li>Влияние на картину плей-офф NFC</li><li>Основные травмы, затронувшие обе команды</li></ul>",
+      "category": "Спорт",
+      "tags": [
+        "НФЛ",
+        "Кардиналы",
+        "Викинги",
+        "НФК"
+      ],
+      "author": "Спортивная команда",
+      "readingTime": "3",
+      "publishDate": "2024-12-01T10:00:00Z"
+    },
+    "liverpool-man-city-epl-2024": {
+      "title": "Ливерпуль против Манчестер Сити: гонка за титул Премьер-лиги",
+      "description": "«Сити» Пепа Гвардиолы встретится с «Ливерпулем» в решающем матче Премьер-лиги",
+      "content": "<p>Ливерпуль и Манчестер Сити, два гиганта Премьер-лиги, столкнулись в матче, который мог существенно повлиять на гонку за титул. Тактический подход Пепа Гвардиолы столкнулся с высокоинтенсивным стилем Ливерпуля на Энфилде.</p><p>Эрлинг Хааланд возглавлял атаку Сити, в то время как Коди Гакпо из Ливерпуля стремился оказать влияние в этом решающем матче. Матч подчеркнул продолжающееся соперничество между двумя ведущими командами Англии.</p><p>Основные моменты матча:</p><ul><li>Тактическая битва между топ-менеджерами</li><li>Голевая форма Хааланда</li><li>Домашнее преимущество Ливерпуля на Энфилде</li><li>Влияние на турнирную таблицу Премьер-лиги</li></ul>",
+      "category": "Спорт",
+      "tags": [
+        "Премьер-лига",
+        "Ливерпуль",
+        "Манчестер Сити",
+        "Футбольный"
+      ],
+      "author": "Спортивная команда",
+      "readingTime": "4",
+      "publishDate": "2024-12-01T10:00:00Z"
+    },
+    "byu-houston-football-2024": {
+      "title": "Университет имени Бригама Янга сразится с Хьюстоном в матче конференции",
+      "description": "BYU Cougars встретятся с Хьюстоном в ключевой игре конференции",
+      "content": "<p>BYU Cougars встретились с Houston Cougars в решающем матче конференции, который имел значительные последствия для сезонов обеих команд. Нападение BYU, возглавляемое ключевыми плеймейкерами, стремилось установить доминирование в начале игры.</p><p>Квотербек Хьюстона Зеон Крисс стремился продолжить свою недавнюю сильную форму против защиты BYU. Игра ознаменовала важную веху в турнирной таблице обеих программ.</p><p>Ключевые элементы:</p><ul><li>Последствия для турнирной таблицы конференции</li><li>Стратегия нападения BYU</li><li>Корректировки защиты Хьюстона</li><li>Влияние на игроков с обеих сторон</li></ul>",
+      "category": "Спорт",
+      "tags": [
+        "Студенческий футбол",
+        "Университет имени Бригама Янга",
+        "Хьюстон",
+        "NCAA"
+      ],
+      "author": "Спортивная команда",
+      "readingTime": "3",
+      "publishDate": "2024-11-30T23:20:00Z"
+    },
+    "miami-hurricanes-acc-2024": {
+      "title": "Футбольная команда Miami Hurricanes: превью игры ACC Title",
+      "description": "Майами встретится с Сиракузами с последствиями чемпионата ACC",
+      "content": "<p>Футбольная программа Miami Hurricanes подготовилась к решающему матчу ACC против Syracuse, на кону которого стояло значительное количество титулов конференции. Под руководством главного тренера Марио Кристобаля Miami стремились укрепить свои позиции в турнирной таблице ACC.</p><p>Игра также стала важным моментом для Syracuse, поскольку они приспособились к недавним изменениям в тренерском составе, когда программу возглавил Фрэн Браун.</p><p>Точки обзора игры:</p><ul><li>Последствия для чемпионата ACC</li><li>Стратегия нападения Miami</li><li>Смена тренера Syracuse</li><li>Состязания ключевых игроков</li><li>Влияние на сценарии игр в боуле</li></ul>",
+      "category": "Спорт",
+      "tags": [
+        "Студенческий футбол",
+        "Майами Харрикейнз",
+        "АСС",
+        "Сиракузы"
+      ],
+      "author": "Спортивная команда",
+      "readingTime": "3",
+      "publishDate": "2024-11-30T18:30:00Z"
     }
   }
 }
