--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -29,17 +29,17 @@
     }
   },
   "seo": {
-    "title": "人工智能技术新闻和更新",
-    "description": "有关人工智能、技术和数字创新的最新消息和见解",
-    "siteUrl": "https://www.ainews.com/",
-    "keywords": "人工智能新闻、技术新闻、人工智能、数字创新、技术更新"
+    "title": "最新新闻和更新 - TrendNews",
+    "description": "了解世界各地的最新新闻、体育动态和热门故事",
+    "siteUrl": "https://www.trendnews.com/",
+    "keywords": "热门新闻、体育新闻、最新动态、时事"
   },
   "categories": {
-    "ai": "人工智能",
+    "sports": "运动的",
+    "politics": "政治",
     "technology": "技术",
-    "innovation": "创新",
-    "research": "研究",
-    "development": "发展",
+    "entertainment": "娱乐",
+    "business": "商业",
     "featured": "精选",
     "trending": "热门内容",
     "latest": "最新的"
@@ -49,36 +49,140 @@
     "contact": "联系我们",
     "privacy": "隐私政策",
     "terms": "使用条款",
-    "copyright": "© 2024 AI News。保留所有权利。"
+    "copyright": "© 2024 TrendNews。保留所有权利。"
   },
   "news": {
-    "ai-breakthrough-2024": {
-      "title": "人工智能重大突破：新模型展现出人类水平的理解力",
-      "description": "一种突破性的新人工智能模型展示了前所未有的自然语言理解和解决问题的能力。",
-      "content": "详细文章内容在这里...",
-      "category": "人工智能",
+    "texas-longhorns-vs-am-2024": {
+      "title": "德克萨斯长角牛队 VS 德克萨斯农工大学：历史性竞争再起",
+      "description": "德克萨斯长角牛队和德克萨斯农工大学队首次在 SEC 比赛中对决，贾斯汀·塔克的传奇被铭记",
+      "content": "<p>在这场备受期待的比赛中，德克萨斯长角牛队和德克萨斯 A&M Aggies 队重燃了历史性的竞争，吸引了全美各地的大学橄榄球迷。这场比赛让人们回想起了长角牛队的传奇球员，包括贾斯汀·塔克，他的关键表现仍然铭刻在球队的历史上。</p><p>奎因·埃沃斯带领长角牛队进攻，而备受吹捧的大一新生阿奇·曼宁（NFL 传奇人物佩顿和伊莱·曼宁的侄子）则在场边做好准备。这场比赛标志着德克萨斯橄榄球队的另一个篇章，该项目培养了贾斯汀·塔克等 NFL 明星，他目前是 NFL 最准确的踢球手之一。</p><p>比赛的值得注意的数据包括：</p><ul><li>体育场观众超过 100,000 人</li><li>两队加入 SEC 以来的首次交锋</li><li>奎因·埃沃斯完成关键传球</li></ul>",
+      "category": "运动的",
       "tags": [
-        "人工智能",
-        "机器学习",
-        "技术"
+        "大学橄榄球",
+        "德克萨斯州",
+        "美国证券交易委员会"
       ],
-      "author": "人工智能新闻团队",
-      "readingTime": "5 分钟",
-      "publishDate": "2024-03-30T10：00：00Z"
+      "author": "运动队",
+      "readingTime": "4",
+      "publishDate": "2024-12-01T16：50：00Z"
     },
-    "tech-innovation-2024": {
-      "title": "革命性的量子计算进步",
-      "description": "科学家在量子计算稳定性方面取得了重大里程碑。",
-      "content": "详细文章内容在这里...",
-      "category": "技术",
+    "kash-patel-fbi-2024": {
+      "title": "卡什·帕特尔：特朗普前官员被考虑担任联邦调查局职务",
+      "description": "前特朗普政府官员卡什·帕特尔 (Kash Patel) 有望成为 FBI 局长候选人",
+      "content": "<p>华盛顿发生了一件大事，前特朗普政府官员卡什·帕特尔 (Kash Patel) 成为联邦调查局局长的潜在候选人。这则消息在政界引起了广泛关注和讨论。</p><p>帕特尔以在国家安全和情报部门担任职务而闻名，随着有关未来联邦调查局领导职位的讨论继续进行，他已成为关注的焦点。</p><p>关于卡什·帕特尔的要点：</p><ul><li>前代理国防部长幕僚长</li><li>曾担任国家安全职务</li><li>有情报行动背景</li></ul>",
+      "category": "政治",
       "tags": [
-        "量子计算",
-        "创新",
-        "研究"
+        "联邦调查局",
+        "政治",
+        "华盛顿"
       ],
-      "author": "科技新闻团队",
-      "readingTime": "4 分钟",
-      "publishDate": "2024-03-29T15：30：00Z"
+      "author": "政治团队",
+      "readingTime": "3",
+      "publishDate": "2024-11-30T18：50：00Z"
+    },
+    "trevor-lawrence-injury-2024": {
+      "title": "特雷弗·劳伦斯在德州人队对阵美洲虎队的比赛中受伤",
+      "description": "美洲虎队四分卫特雷弗·劳伦斯在与德州人队的比赛中受到严重撞击后被抬离场",
+      "content": "<p>杰克逊维尔美洲虎队四分卫特雷弗·劳伦斯在今天对阵休斯顿德州人队的比赛中受到重击后被抬离场外。此次事件发生在第三节，这是一场至关重要的分区对决。</p><p>初步报告显示，劳伦斯在被德州人队后卫阿齐兹·阿尔沙伊尔撞击后接受了脑震荡评估。在本赛季的最后冲刺阶段，美洲虎队的这次受伤引发了人们对季后赛希望的担忧。</p><p>关键进展：</p><ul><li>劳伦斯在第三节被抬离场外</li><li>接受脑震荡评估</li><li>替补四分卫已接管比赛任务</li></ul>",
+      "category": "运动的",
+      "tags": [
+        "美国橄榄球联盟",
+        "美洲虎",
+        "伤病新闻"
+      ],
+      "author": "运动队",
+      "readingTime": "4",
+      "publishDate": "2024-12-01T09:30:00Z"
+    },
+    "eagles-ravens-matchup-2024": {
+      "title": "老鹰队与乌鸦队在超级碗争夺战中展开对决",
+      "description": "拉马尔·杰克逊和老鹰队防守是跨联盟比赛的关键焦点",
+      "content": "<p>费城老鹰队和巴尔的摩乌鸦队在备受期待的超级碗争夺者对决中相遇。乌鸦队的四分卫拉马尔·杰克逊在面对老鹰队强大的防守时展示了他充满活力的组织进攻能力。</p><p>这场比赛有几个关键的对决，包括由德里克·亨利带领的乌鸦队冲锋进攻对阵老鹰队的前七名。扎伊·弗劳尔斯继续他在乌鸦队令人印象深刻的新秀赛季。</p><p>比赛亮点：</p><ul><li>拉马尔·杰克逊的双重威胁表现</li><li>老鹰队的防守调整</li><li>两队进攻线的关键表现</li></ul>",
+      "category": "运动的",
+      "tags": [
+        "美国橄榄球联盟",
+        "老鹰队",
+        "乌鸦",
+        "拉马尔·杰克逊"
+      ],
+      "author": "运动队",
+      "readingTime": "3",
+      "publishDate": "2024-12-01T00:30:00Z"
+    },
+    "seahawks-jets-nfl-2024": {
+      "title": "海鹰队在第 13 周 NFL 比赛中主场迎战喷气机队",
+      "description": "吉诺·史密斯带领海鹰队在关键比赛中对阵陷入困境的喷气机队",
+      "content": "<p>由四分卫 Geno Smith 领衔的西雅图海鹰队在第 13 周主场迎战纽约喷气机队，这场比赛对季后赛至关重要。Smith 面对他的前东家，旨在让西雅图在竞争激烈的 NFC 西区继续保持季后赛的希望。</p><p>新秀跑卫 Zach Charbonnet 已成为海鹰队进攻的关键球员，而喷气机队则继续寻求进攻的一致性。</p><p>关键故事情节：</p><ul><li>Geno Smith 对阵前东家的表现</li><li>海鹰队的季后赛定位</li><li>喷气机队的进攻挣扎</li><li>新秀 Zach Charbonnet 的影响</li></ul>",
+      "category": "运动的",
+      "tags": [
+        "美国橄榄球联盟",
+        "海鹰队",
+        "喷气机",
+        "第 13 周"
+      ],
+      "author": "运动队",
+      "readingTime": "3",
+      "publishDate": "2024-12-01T10：00：00Z"
+    },
+    "cardinals-vikings-nfl-2024": {
+      "title": "红雀队 vs 维京人队：NFC 季后赛影响",
+      "description": "山姆·达诺德和红雀队在 NFC 关键比赛中对阵维京人队",
+      "content": "<p>亚利桑那红雀队在四分卫 Sam Darnold 的带领下迎战明尼苏达维京人队，这场比赛对 NFC 季后赛具有重大影响。维京人队的防守由经验丰富的球员领衔，他们试图遏制红雀队的进攻威胁。</p><p>Kyler Murray 的缺席继续影响红雀队的进攻策略，而维京人队则致力于保持他们在 NFC 北区的位置。</p><p>比赛焦点：</p><ul><li>Sam Darnold 作为首发的表现</li><li>维京人的防守策略</li><li>对 NFC 季后赛前景的影响</li><li>影响两支球队的关键伤病</li></ul>",
+      "category": "运动的",
+      "tags": [
+        "美国橄榄球联盟",
+        "红雀队",
+        "维京人",
+        "近场通信"
+      ],
+      "author": "运动队",
+      "readingTime": "3",
+      "publishDate": "2024-12-01T10：00：00Z"
+    },
+    "liverpool-man-city-epl-2024": {
+      "title": "利物浦 VS 曼城：英超联赛冠军争夺战",
+      "description": "瓜迪奥拉的曼城将在英超联赛中对阵利物浦",
+      "content": "<p>英超两大豪门利物浦和曼城之间的对决可能会对冠军争夺产生重大影响。在安菲尔德球场，佩普·瓜迪奥拉的战术方法与利物浦的高强度比赛风格形成鲜明对比。</p><p>哈兰德率领曼​​城进攻，而利物浦的加克波则力图在这场关键比赛中有所作为。这场比赛凸显了英格兰两支顶级球队之间的持续竞争。</p><p>比赛亮点：</p><ul><li>高层管理人员之间的战术较量</li><li>哈兰德的进球状态</li><li>利物浦在安菲尔德的主场优势</li><li>对英超积分榜的影响</li></ul>",
+      "category": "运动的",
+      "tags": [
+        "英超联赛",
+        "利物浦",
+        "曼城",
+        "足球"
+      ],
+      "author": "运动队",
+      "readingTime": "4",
+      "publishDate": "2024-12-01T10：00：00Z"
+    },
+    "byu-houston-football-2024": {
+      "title": "杨百翰大学在联赛对决中对阵休斯顿大学",
+      "description": "杨百翰大学美洲狮队在关键联赛中对阵休斯顿队",
+      "content": "<p>杨百翰大学美洲狮队与休斯顿美洲狮队进行了一场至关重要的联赛对决，这对两支球队的赛季都有重大影响。杨百翰大学的进攻由关键的组织核心带领，他们希望在比赛初期就占据优势。</p><p>休斯顿的四分卫 Zeon Chriss 打算继续他最近对阵杨百翰大学防守的强劲表现。这场比赛是两个项目的联赛排名的重要里程碑。</p><p>关键要素：</p><ul><li>联赛排名影响</li><li>杨百翰大学的进攻策略</li><li>休斯顿的防守调整</li><li>影响双方球员</li></ul>",
+      "category": "运动的",
+      "tags": [
+        "大学橄榄球",
+        "杨百翰大学",
+        "休斯顿",
+        "美国大学体育协会"
+      ],
+      "author": "运动队",
+      "readingTime": "3",
+      "publishDate": "2024-11-30T23：20：00Z"
+    },
+    "miami-hurricanes-acc-2024": {
+      "title": "迈阿密飓风橄榄球队：ACC 冠军赛预览",
+      "description": "迈阿密对阵锡拉丘兹，争夺 ACC 冠军",
+      "content": "<p>迈阿密飓风队足球队为与锡拉丘兹队进行一场至关重要的 ACC 对决做准备，这场对决对联赛冠军具有重大影响。在主教练马里奥·克里斯托巴尔的带领下，迈阿密队希望巩固他们在 ACC 积分榜上的地位。</p><p>这场比赛也是锡拉丘兹队的重要时刻，因为他们适应了最近由弗兰·布朗领导的教练变动。</p><p>比赛预览要点：</p><ul><li>ACC 冠军的影响</li><li>迈阿密队的进攻策略</li><li>锡拉丘兹队的教练变动</li><li>关键球员对决</li><li>对碗赛场景的影响</li></ul>",
+      "category": "运动的",
+      "tags": [
+        "大学橄榄球",
+        "迈阿密飓风队",
+        "ACC",
+        "锡拉丘兹"
+      ],
+      "author": "运动队",
+      "readingTime": "3",
+      "publishDate": "2024-11-30T18：30：00Z"
     }
   }
 }
